webapp/src/components/SettingsPage/SettingsPage.css
.SettingsPage {
  color: var(--text);
}

.SettingsPage .header {
  font-weight: 100;
}

.SettingsPage > .Loading {
  font-size: 10px;
  top: 25%;
}

.SettingsPage .sign-in {
  display: block;
  text-align: center;
  margin-top: 50px;
}

.SettingsPage .row {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
}

.SettingsPage .column {
  display: inline-block;
  padding: 1em;
}

.SettingsPage form {
  display: inline-block;
}

.SettingsPage .AddressBlock {
  margin-right: 40px;
  box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
}

@media (max-width: 768px) {
  .SettingsPage .row {
    flex-flow: column nowrap;
  }

  .blockie {
    margin: 0 auto 50px;
  }
}

